compiler/weave_syntax/tests/data/Trivia.error
error: Unexpected tokens
        --> <source>:7:8
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Expected ';'
        --> <source>:9:5
         |
       9 |     } else {
         |     ^
error: Expected ';'
        --> <source>:11:5
         |
      11 |     }
         |     ^
